--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="description" content="Aplicación de búsqueda de imágenes. Práctica módulo 2 - ThePowerMBA" />
+    <meta name="keywords" content="búsqueda de imágenes, aplicación imágenes, imágenes"/>
+    <link rel="shortcut icon" href="./public/camara-favicon.png" type="image/x-icon">
+    <script type="module" src="/main.js" defer></script>
+    <title>.:: Phinterest ::.</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+  <body> 
+    <div id="app">
+    </div>
   </body>
 </html>
