--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body> 
     <div id="app">
+      <img src="./public/logo-phinterest.png" alt="logo-phinterest">
     </div>
   </body>
 </html>
