Nuevo header creado directamente sobre el index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <title>.:: Phinterest ::.</title>
   </head>
   <body> 
+    <header id="appHeader" class="flex-container">
+      <img src="./public/logo-phinterest.png" id="logoPhinterest" alt="Logo Phinterest">
+      <ul id="navMenu">
+        <li>Inicio</li>
+        <li>Hoy</li>
+        <li>Crear</li>
+      </ul>
+      <div class="searchFormContainer" id="form-container"></div>
+      <ul class="icons-list-header">
+        <li class="icons-list">
+          <img src="./public/bell-icon.png" alt="icono avisos">
+        </li>
+        <li class="icons-list">
+          <img src="./public/dialog-icon.png" alt="icono chat">
+        </li>
+        <li class="icons-list">
+          <img src="./public/usuario.png" alt="icono perfil usuario">
+        </li>
+      </ul>
+    </header>
     <div id="app">
     </div>
   </body>
